--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,278 +1,340 @@
+
+
 .main {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: stretch;
   padding: 6rem;
   min-height: 100vh;
+  box-sizing: border-box;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
+.upper {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
+  align-items: stretch;
+  padding: 6rem;
+  min-height: 100vh;
+  box-sizing: border-box;
+}
+
+.photo {
+  display: flex;
   width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+  height: auto;
 }
 
-.description a {
+.green {
+  color: #249f42;
+}
+
+.faded {
+  color: grey;
+}
+
+.column {
+  width: auto;
+  /* flex: 1; */
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  flex-direction: column;
+  justify-content: space-around;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.divider {
+  display: flex;
+  flex-direction: row;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.pageLeft {
+  /* flex-grow: 1; */
+  flex: 1;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  width: var(--max-width);
-  max-width: 100%;
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
+.item {
+  width: 80%;
+  min-width: 80%;
   display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
+  margin-top: 2rem;
+  /* filter: grayscale(100%); */
   position: relative;
-  padding: 4rem 0;
+  flex-grow: 1;
+
 }
 
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
+.polaroid {
+  background: #fff;
+  padding: 1rem;
+  box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.2);
+  width: 100%;
+  height: auto;
 }
 
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
+.polaroid > Image {
+  max-width: 100%;
+  height: auto;
 }
 
-.center::before,
-.center::after {
-  content: '';
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
+.caption {
+  font-size: 1.8rem;
+  color: #385ed8;
+  text-align: center;
+  line-height: 2em;
 }
 
-.logo,
-.thirteen {
-  position: relative;
-}
-
-.thirteen {
+.details {
   display: flex;
-  justify-content: center;
   align-items: center;
-  width: 75px;
-  height: 75px;
-  padding: 25px 10px;
-  margin-left: 16px;
-  transform: translateZ(0);
-  border-radius: var(--border-radius);
-  overflow: hidden;
-  box-shadow: 0px 2px 8px -1px #0000001a;
+  justify-content: center;
+  flex: 1;
+  flex-grow: 1;
+  font-size: 2.8rem;
+  text-align: center;
+  line-height: 2em;
+  line-height: 130%;
 }
 
-.thirteen::before,
-.thirteen::after {
+.footer {
+  font-size: 3rem;
+  text-align: start;
+  line-height: 1.5em;
+  background-color: #249f42;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: stretch;
+  padding: 6rem;
+  /* min-height: 100vh; */
+  box-sizing: border-box;
+}
+
+.item .polaroid:before {
   content: '';
   position: absolute;
   z-index: -1;
+  transition: all 0.35s;
 }
 
-/* Conic Gradient Animation */
-.thirteen::before {
-  animation: 6s rotate linear infinite;
-  width: 200%;
-  height: 200%;
-  background: var(--tile-border);
+/* .item:nth-of-type(4n+1) {
+  transform: scale(0.8, 0.8) rotate(5deg);
+  transition: all 0.35s;
+} */
+
+.item1, .item7 {
+  transform: scale(0.8, 0.8) rotate(5deg);
+  transition: all 0.35s;
 }
 
-/* Inner Square */
-.thirteen::after {
-  inset: 0;
-  padding: 1px;
-  border-radius: var(--border-radius);
-  background: linear-gradient(
-    to bottom right,
-    rgba(var(--tile-start-rgb), 1),
-    rgba(var(--tile-end-rgb), 1)
-  );
-  background-clip: content-box;
+
+/* .item:nth-of-type(4n+2) {
+  transform: scale(0.8, 0.8) rotate(-5deg);
+  transition: all 0.35s;
+} */
+
+.item2, .item5 {
+  transform: scale(0.8, 0.8) rotate(-5deg);
+  transition: all 0.35s;
 }
 
-/* Enable hover only on non-touch devices */
-@media (hover: hover) and (pointer: fine) {
-  .card:hover {
-    background: rgba(var(--card-rgb), 0.1);
-    border: 1px solid rgba(var(--card-border-rgb), 0.15);
-  }
-
-  .card:hover span {
-    transform: translateX(4px);
-  }
+.item2 .polaroid:before, .item5 .polaroid:before {
+  transform: rotate(-6deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  left: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
 }
 
-@media (prefers-reduced-motion) {
-  .thirteen::before {
-    animation: none;
-  }
-
-  .card:hover span {
-    transform: none;
-  }
+.item1 .polaroid:before, .item7 .polaroid:before {
+  transform: rotate(6deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  right: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.4);
 }
 
-/* Mobile */
-@media (max-width: 700px) {
-  .content {
-    padding: 4rem;
-  }
+.item:hover {
+  filter: none;
+  transform: scale(1, 1) rotate(0deg) !important;
+  transition: all 0.35s;
+}
+.item:hover .polaroid:before {
+  content: '';
+  position: absolute;
+  z-index: -1;
+  transform: rotate(0deg);
+  height: 90%;
+  width: 90%;
+  bottom: 0%;
+  right: 5%;
+  box-shadow: 0 1rem 3rem rgba(0,0,0,0.2);
+  transition: all 0.35s;
+}
 
-  .grid {
-    grid-template-columns: 1fr;
-    margin-bottom: 120px;
-    max-width: 320px;
-    text-align: center;
-  }
+.item3, .item6, .item8 {
+  transform: scale(0.8, 0.8) rotate(-3deg);
+  transition: all 0.35s;
+}
+.item3 .polaroid:before, .item6 .polaroid:before, .item8 .polaroid:before {
+  transform: rotate(-4deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  left: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.3);
+}
 
-  .card {
-    padding: 1rem 2.5rem;
-  }
+.item4, .item9 {
+  transform: scale(0.8, 0.8) rotate(3deg);
+  transition: all 0.35s;
+}
+.item4 .polaroid:before, .item9 .polaroid:before {
+  transform: rotate(4deg);
+  height: 20%;
+  width: 47%;
+  bottom: 30px;
+  right: 12px;
+  box-shadow: 0 2.1rem 2rem rgba(0,0,0,0.3);
+}
 
-  .card h2 {
-    margin-bottom: 0.5rem;
-  }
+.writing1 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(-3deg);
 
-  .center {
-    padding: 8rem 0 6rem;
-  }
+  transition: all 0.35s;
+}
 
-  .center::before {
-    transform: none;
-    height: 300px;
-  }
+.writing2 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(2deg);
 
-  .description {
-    font-size: 0.8rem;
-  }
+  transition: all 0.35s;
+}
 
-  .description a {
-    padding: 1rem;
-  }
+.writing3 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(0.8, 1) rotate(-2deg);
 
-  .description p,
-  .description div {
-    display: flex;
-    justify-content: center;
-    position: fixed;
-    width: 100%;
-  }
+  transition: all 0.35s;
+  /* line-height: 100%; */
+}
 
-  .description p {
-    align-items: center;
-    inset: 0 0 auto;
-    padding: 2rem 1rem 1.4rem;
-    border-radius: 0;
-    border: none;
-    border-bottom: 1px solid rgba(var(--callout-border-rgb), 0.25);
-    background: linear-gradient(
-      to bottom,
-      rgba(var(--background-start-rgb), 1),
-      rgba(var(--callout-rgb), 0.5)
-    );
-    background-clip: padding-box;
-    backdrop-filter: blur(24px);
-  }
+.writing4 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(2deg);
 
-  .description div {
-    align-items: flex-end;
-    pointer-events: none;
-    inset: auto 0 0;
+  transition: all 0.35s;
+  /* line-height: 100%; */
+}
+
+.writing5 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(1deg);
+
+  transition: all 0.35s;
+  /* line-height: 100%; */
+}
+
+.writing6 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(-1deg);
+
+  transition: all 0.35s;
+  line-height: 100%;
+}
+
+.writing7 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(-2deg);
+
+  transition: all 0.35s;
+  line-height: 100%;
+}
+
+.writing8 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(-1deg);
+
+  transition: all 0.35s;
+  line-height: 100%;
+}
+
+.writing9 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(0.5deg);
+
+  transition: all 0.35s;
+  /* line-height: 100%; */
+}
+
+/* .writing:nth-of-type(4n+2) {
+  transform: scale(1, 1) rotate(-3deg) translateX(10px) translateY(-30%);
+  transition: all 0.35s;
+} */
+
+@media screen and (max-width: 800px) {
+  .main {
     padding: 2rem;
-    height: 200px;
-    background: linear-gradient(
-      to bottom,
-      transparent 0%,
-      rgb(var(--background-end-rgb)) 40%
-    );
-    z-index: 1;
+  }
+
+  .divider {
+    justify-content: space-between;
+    flex-direction: column-reverse;
+  }
+
+  .details {
+    line-height: 90%;
+    font-size: 1.8rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
+  }
+
+  .pageLeft {
+    display: flex;
+    width: 140%;
+    align-self: center;
+  }
+
+  .caption {
+    line-height: 100%;
+    /* font-size: 1.8rem; */
+  }
+
+  .footer {
+    line-height: 110%;
+    font-size: 2rem;
+    width: 100%;
+    padding: 2rem;
+    padding-bottom: 4rem;
+  }
+
+  .polaroid {
+    width: 100%;
+    height: auto;
+    /* justify-content: start; */
+  }
+
+  .item {
+    display: flex;
   }
 }
 
-/* Tablet and Smaller Desktop */
-@media (min-width: 701px) and (max-width: 1120px) {
-  .grid {
-    grid-template-columns: repeat(2, 50%);
+@media screen and (min-width: 800px) and (max-width: 1020px) {
+  .details {
+    line-height: 90%;
+    font-size: 1.8rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 }
 
-@media (prefers-color-scheme: dark) {
-  .vercelLogo {
-    filter: invert(1);
-  }
-
-  .logo,
-  .thirteen img {
-    filter: invert(1) drop-shadow(0 0 0.3rem #ffffff70);
-  }
-}
-
-@keyframes rotate {
-  from {
-    transform: rotate(360deg);
-  }
-  to {
-    transform: rotate(0deg);
+@media screen and (min-width: 1020px) and (max-width: 1400px) {
+  .details {
+    line-height: 100%;
+    font-size: 2.4rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
   }
 }
