Add thunder lotus content

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -27,7 +27,9 @@
 }
 
 .green {
-  color: #249f42;
+  /* color: #249f42; */
+  color: #FF0078;
+
 }
 
 .faded {
@@ -99,7 +101,7 @@
   font-size: 3rem;
   text-align: start;
   line-height: 1.5em;
-  background-color: #249f42;
+  background-color: #29294f;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -107,6 +109,19 @@
   padding: 6rem;
   /* min-height: 100vh; */
   box-sizing: border-box;
+}
+
+.bleedWrap {
+  display: flex;
+}
+
+.bleedText {
+  font-size: 4.8rem;
+  /* transform: translateY(41%); */
+  line-height: 0.6;
+  font-weight: 900;
+  padding-left: 6rem;
+  color: #29294f;
 }
 
 .item .polaroid:before {
@@ -264,6 +279,14 @@
 .writing9 {
   /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
   transform: scale(1, 1) rotate(0.5deg);
+
+  transition: all 0.35s;
+  /* line-height: 100%; */
+}
+
+.writing10 {
+  /* transform: scale(1, 1) rotate(-2deg) translateX(10px) translateY(-30%); */
+  transform: scale(1, 1) rotate(0deg);
 
   transition: all 0.35s;
   /* line-height: 100%; */
