Update ludum dare section

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -32,6 +32,18 @@
 
 }
 
+.ludum {
+  color: #e53;
+}
+
+.dare {
+  color: #f79122;
+}
+
+.miasma {
+  color: #7B6C8A;
+}
+
 .faded {
   color: grey;
 }
