--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -53,6 +53,10 @@
   /*comment*/
 }
 
+.ludeon {
+  color: #f9b058;
+}
+
 .faded {
   color: grey;
 }
@@ -122,7 +126,7 @@
   font-size: 3rem;
   text-align: start;
   line-height: 1.5em;
-  background-color: #a35efa;
+  background-color: #f9b058;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -130,6 +134,7 @@
   padding: 6rem;
   /* min-height: 100vh; */
   box-sizing: border-box;
+  /* color: black; */
 }
 
 .bleedWrap {
@@ -142,7 +147,7 @@
   line-height: 0.6;
   font-weight: 900;
   padding-left: 6rem;
-  color: #a35efa;
+  color: #f9b058;
 }
 
 .item .polaroid:before {
