Update content and styling

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -56,6 +56,10 @@
   color: #f9b058;
 }
 
+.racoon {
+  color: #faac0d;
+}
+
 .faded {
   color: grey;
 }
@@ -125,7 +129,7 @@
   font-size: 3rem;
   text-align: start;
   line-height: 1.5em;
-  background-color: #f9b058;
+  background-color: #faac0d;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
@@ -146,7 +150,7 @@
   line-height: 0.6;
   font-weight: 900;
   padding-left: 6rem;
-  color: #f9b058;
+  color: #faac0d;
 }
 
 .item .polaroid:before {
